k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment
  labels:
    app: httpserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: http-server
          args: ["-logtostderr=true", "-stderrthreshold=WARNING", "-v=3"]
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
          image: jyabcd360/http-server:0.0.2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 1
          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 2
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 500Mi
      volumes:
        - name: config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: http-server-config
